--- a/.github/workflows/deploy_prerelease.yml
+++ b/.github/workflows/deploy_prerelease.yml
@@ -33,4 +33,4 @@ jobs:
       - name: Package and release
         uses: BigWigsMods/packager@v2
         with:
-          args: -S
+          args: -S -a WYK9AOKL
